AxonIvyPortal/portal/webContent/resources/css/module.css
/* ... */
.si-add-circle-task-description, .si-add-circle-case-description {
  position: relative;
  top: 18px;
  right: 1px;
  margin-left: 0px;
}

.moveable-area {
  cursor: move;
}

.no-padding-column {
  padding-left: 0px !important;
}

.separator-task-detail {
  margin: 25px 0 22px 0;
  opacity: 0.5;
}

.separator-task-detail::before {
  border-top: 1px solid var(--task-detail-separator-border-color);
}

.task-detail-state {
  padding-left: 5px;
}

.task-name-inplace {
  width: calc(100% - 110px);
  flex-grow: 0;
}

.task-action-item {
  margin: auto 7px;
}

.task-action-item .task-action-item-label {
  margin-right: 5px;
}

.action-link {
  margin: auto 10px;
  display: flex;
  align-items: center;
}

@media screen and (max-width: 40em) {
  .action-link {
    margin: auto 0;
    align-items: center;
  }
  
  .task-action-item {
    margin-right: 7px;
  }
}

.case-header-action-cell .action-container {
  padding: 0 10px;
}

.action-link span {
  margin-right: 5px;
}

.task-right-component {
  margin-top: 0px !important;
}

.task-detail-description-label {
  align-items: start !important;
}

.task-detail-section-title, .task-history-button-container {
  display: inline-block !important;
  align-content: start;
  padding: 0 !important;
  position: relative;
}

.related-task-section-header-actions,
.related-case-section-header-actions {
  display: flex !important;
  align-content: start;
  padding: 0 !important;
  position: relative;
  white-space: nowrap;
  align-items: center;
  justify-content: flex-end;
}

.related-task-show-only-open-tasks,
.related-case-export-to-excel {
  margin-left: auto;
}

.related-task-column-config,
.related-case-column-config {
  margin-left: 20px;
}

.task-description-inplace .ui-button.ui-widget.ui-button-icon-only.ui-inplace-save {
  margin-right: 5px;
  margin-top: 3px;
}

.task-business-case {
  margin-top: 0px !important;
  display: inline !important;
}

.task-details-priority .edit-priority-inplace .ui-inplace-display {
  margin-left: -0.5rem;
}

.task-details-priority .portal-edit-inplace .ui-inplace-display {
  padding: 0.75rem 0.5rem 0 0.5rem;	
}

.truncate-note {
  width: 100%;
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.task-detail-header .task-name {
  display: block;
}

.has-breadcrumb .task-detail-header .task-name,
.ms-teams-layout .task-detail-header .task-name {
  display: none;
}

.task-name {
  width: 100%;
}

.task-details-back-btn, .case-details-back-btn {
  flex: 0;
  margin-right: 5px !important;
  display: inline-flex;
  align-items: center;
  flex-direction: row;
  justify-content: flex-end;
}

.task-note-dialog .ui-dialog-content.ui-widget-content {
  max-height: 40vh;
}


@media screen and (max-width: 40em) {
  .task-note-component,
  .task-document-component {
    height: auto;
  }
}

.case-document-name a, .task-document-name a {
  display: flex;
  flex-wrap: nowrap;
  align-items: center; }

.case-document-name .document-name, .task-document-name .document-name {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden; }

/*  =================== END TASK DETAIL PAGE ========================= */

/*  =================== TASK TEMPLATE PAGE ========================= */
.task-title {
  flex: 1;
}

.task-actions-menu .ui-slidemenu-backward.ui-widget-header {
  border: none;
  padding: 6px;
  line-height: 2rem;
  margin: auto;
}

.task-actions-menu .empty-side-steps {
  min-height: 40px;
}

.case-upload-dialog, .case-view-note-dialog, .document-upload-dialog, .task-note-dialog,
.task-upload-dialog, .document-renaming-dialog {
  min-width: 50vw;
}

@media screen and (max-width: 40em) {
  .case-details {
    padding: 0 !important;
  }
  .case-upload-dialog, .case-view-note-dialog, .task-upload-dialog, .document-upload-dialog, .task-note-dialog {
    min-width: 70vw;
    max-width: 96vw;
  }

  .case-details-data-1st-column {
    padding-right: 10px;
    text-align: left;
    width: 170px;
    line-height: 2.2rem;
  }
  .case-description-2nd-column {
    width: calc(100% - 175px);
    height: 95px;
    margin-left: 2px;
    overflow-y: auto;
    overflow-x: hidden;
    word-break: break-all;
    margin-top: 0.2em;
  }
}

.note-show-more-link-icon, .note-show-more-link {
  margin-left: 5px;
}

/*  =================== END TASK TEMPLATE PAGE ========================= */

@media screen and (max-width: 1320px) {
  .display-full-text {
    display: none !important;
  }
}

@media screen and (min-width: 1320px) {
  .display-short-text {
    display: none !important;
  }
}

/*=================== BREADCRUMB ===================*/
body .ui-widget-header.portal-breadcrumb a {
  outline: none;
}

.layout-topbar .layout-topbar-wrapper .layout-topbar-right .layout-topbar-actions > li.topbar-item.breadcrumb-container {
  margin-left: auto;
  flex-grow: 1;
  padding: 10px;
  justify-content: flex-start;
  transition: margin-left .3s;
}

.layout-wrapper .layout-main .layout-topbar .layout-topbar-menu-wrapper .topbar-menu>li.breadcrumb-container {
  display: flex;
  float: left;
  margin-left: 0;
  line-height: 1.65;
}

.layout-wrapper .layout-main .layout-topbar .layout-topbar-menu-wrapper .topbar-menu>li.breadcrumb-container>form {
  width: 100%;
}

body .ui-widget-header.portal-breadcrumb {
  border: none;
  padding: 0;
}

body .ui-widget-header.portal-breadcrumb .ui-menuitem-link.ui-state-disabled {
  width: 100%;
}

body .ui-widget-header.portal-breadcrumb .ui-menuitem-link.ui-state-disabled .ui-menuitem-text {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

body .ui-menu .ui-menu-list .ui-menuitem .ui-menuitem-link .ui-menuitem-icon {
  color: var(--text-color);
}

body .portal-breadcrumb.ui-breadcrumb ul li {
  line-height: 2rem;
}

body .portal-breadcrumb.ui-breadcrumb ul li .has-count {
  display: inline;
}

.ui-breadcrumb .ui-icon-home:before {
  display: none;
}

body .ui-breadcrumb li:first-child a span {
  display: block;
}
/* ... */

